# optomcalc-js

./: .pre-commit-config.yaml  CNAME  README.md  asset-manifest.json  docker-compose.yml  index.html  makefile  package-lock.json  package.json  tsconfig.json
.github/workflows/: ansible_deploy.yml  build.yml
ansible/: deploy.yml  hosts
ansible/templates/: api.optomcalc.shivan.xyz  optomcalc.shivan.xyz
backend/: .coverage  Dockerfile  pyproject.toml
backend/app/: main.py
backend/tests/: conftest.py  test_main.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/CustomInput/: CustomInput.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/Output/: Output.tsx
frontend/src/lib/: httpCommon.ts
public/: index.html
src/: App.js  App.tsx  index.css
src/components/: header.tsx  input.tsx  navbar.js  navbar.tsx  output.tsx
src/views/: backVertexPower.tsx  cylindrical-transposition.tsx  cylindrical_transposition.js  minimum-blank-size.tsx
src/views/BackVertexPower/: BackVertexPower.tsx  index.tsx
src/views/CrossCylinder/: CrossCylinder.tsx  index.tsx
src/views/CylindricalTransposition/: CylindricalTransposition.tsx
src/views/MinimumBlankSize/: MinimumBlankSize.tsx  index.tsx
static/css/: main.27337ea7.css  main.27337ea7.css.map  main.6a74842e.css  main.6a74842e.css.map  main.7c27d9ea.css  main.7c27d9ea.css.map  main.9d6bcc8b.css  main.9d6bcc8b.css.map
static/js/: 787.47e15df9.chunk.js  787.47e15df9.chunk.js.map  787.88425a3f.chunk.js  787.88425a3f.chunk.js.map  main.10104817.js  main.10104817.js.map  main.4a0d9b3a.js  main.4a0d9b3a.js.map  main.4cf7120a.js  main.4cf7120a.js.map  main.5c2814cc.js  main.5c2814cc.js.map  main.647ed8e8.js  main.647ed8e8.js.map  main.b6e48174.js  main.b6e48174.js.map
(+3 files in other folders)
