[project]
name = "optomcalc"
version = "0.0.1"
dependencies = ["fastapi", "uvicorn", "pydantic"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov[all]",
  "tox",
  "mypy",
  "flake8",
  "pytest-instafail",
  "pytest-xdist",
  "requests",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
default_section = "THIRDPARTY"
known_first_party = ["app"]
known_third_party = ["fastapi", "setuptools", "uvicorn"]

[tool.black]
line-length = 79
include = '\.pyi?%'

[tool.mypy]
mypy_path = "./backend"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
strict_optional = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "-n",
  "auto",
  "--cov",
  "--cov-config=./pyproject.toml",
  "--cov-branch",
  "--cov-report=html",
]
testpaths = ["./tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
log_level = "ERROR"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version_files = [
  "pyproject.toml",
  "../frontend/package.json",
  "./app/__init__.py",
]
version = "0.0.1"
tag_format = "$version"

style = [
  [
    "qmark",
    "fg:#ff9d00 bold",
  ],
  [
    "question",
    "bold",
  ],
  [
    "answer",
    "fg:#ff9d00 bold",
  ],
  [
    "pointer",
    "fg:#ff9d00 bold",
  ],
  [
    "highlighted",
    "fg:#ff9d00 bold",
  ],
  [
    "selected",
    "fg:#cc5454",
  ],
  [
    "separator",
    "fg:#cc5454",
  ],
  [
    "instruction",
    "",
  ],
  [
    "text",
    "",
  ],
  [
    "disabled",
    "fg:#858585 italic",
  ],
]
